--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   font-size: 5rem;
   letter-spacing: 0.2rem;
 }
+
 .start {
   background-color: rgb(255, 200, 0);
   padding: 1rem;
@@ -69,6 +70,9 @@ body {
   margin: auto;
   margin-top: 5vh;
   position: relative;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
 }
 
 .game .board {
@@ -100,7 +104,17 @@ body {
 }
 
 .gopher.disappear {
+  pointer-events: none;
   transform: rotateZ(720deg);
   scale: 0;
   transition: all 0.3s ease-out;
+}
+@media (max-width: 768px) {
+  .modal h1 {
+    font-size: 2rem;
+  }
+  .gopher {
+    height: 100px;
+    width: 100px;
+  }
 }
